--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <!-- style = "background: #232a31; -->
-  <body style = "background: #232a31;">
+  <body>
     <noscript>You need to enable JavaScript to run thisapp.</noscript>
     <div id="root"></div>
     <!--
